--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,14 @@
-<h2>Birdnest</h2>
+<!DOCTYPE html>
+<HTML>
+  <HEAD>
+    <title>Birdnest</title>
+    <meta http-equiv="refresh" content="{{ page_refresh }}">
+  </HEAD>
+  <BODY>
+    <h2>Birdnest</h2>
 
-{% for pilot in pilots %}
-{{pilot.distance}} {{pilot.firstName}} {{pilot.lastName}} {{pilot.email}} TIMESTAMP: {{pilot.timestamp}}<br>
-{% endfor %}
+    {% for pilot in pilots %}
+    {{pilot.distance}} {{pilot.firstName}} {{pilot.lastName}} {{pilot.email}} TIMESTAMP: {{pilot.timestamp}}<br>
+    {% endfor %}
+  </BODY>
+  </HTML>
