--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <h2>Birdnest</h2>
 
     {% for pilot in pilots %}
-    {{pilot.distance}} {{pilot.firstName}} {{pilot.lastName}} {{pilot.email}} TIMESTAMP: {{pilot.timestamp}}<br>
+    {% set distance_in_metres = pilot.distance / 1000 %}
+    {{ distance_in_metres|round|int }} {{pilot.firstName}} {{pilot.lastName}} {{pilot.email}} TIMESTAMP: {{pilot.timestamp}}<br>
     {% endfor %}
   </BODY>
   </HTML>
